feat: implement auth APIs (signup & signin)

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ BASE_PATH='/api/v1'
 NODE_ENV='development'
 
 DATABASE_URL='mongodb://localhost:27017/activity-booking-api'
+
+JWT_SECRET='my-secret'
+JWT_EXPIRES_IN='1d'
